chore: data.sql 무시

--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@ build/
 
 ### config ###
 src/main/resources/application.yml
-
+src/main/resources/data.sql
 
 ### IntelliJ IDEA ###
 .idea/modules.xml
